--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <p>4 301020231050</p>
     <p>5 301020231120</p>
     <<<<<<< patch-1
-    <p>pr 1 for hactoberfest</p>
+    <p>pr 1 for hacktoberfest</p>
+    <p>pr 2 for hacktoberfest</p>
     =======
     >>>>>>> main
 </body>
