--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <<<<<<< patch-1
     <p>pr 1 for hacktoberfest</p>
     <p>pr 2 for hacktoberfest</p>
+    <h2>how to update the repo</h2>
+    <p> fork repostory <br> make changes<br> commit changes <br> merge changes<br> create pull request <br> wait for pull request to be accepted</p>
     =======
     >>>>>>> main
 </body>
