--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <p>pr 1 for hacktoberfest</p>
     <p>pr 2 for hacktoberfest</p>
     =======
+    <!-- comment -->
+    <h4>paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph</h4>
+    <h6>hello <br> is it</h6>
+     <!-- non case sensitive, br is used to shift to next line create breaks-->
+    <h1>biggest headline</h1>
+    <h6>smallest headline</h6>
+    <big>this tag shows big text</big> <hr>
+    <small>this tag shows small text</small>
+
+    <p>sub<sub>sub</sub>sub</p>
+    <p>H<sub>2</sub>O</p>
+    <p>sup<sup>sup</sup>sup</p>
+    <p>A<sup>2</sup>+B<sup>2</sup></p>
+    <!-- superscript and subscript-->
     >>>>>>> main
 </body>
 </html>
